plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.hq'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'  // env파일 사용
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.projectlombok:lombok'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	implementation 'io.swagger.core.v3:swagger-annotations:2.2.22'
	implementation 'org.springframework.boot:spring-boot-starter-mail:3.3.2'
	implementation 'org.springframework.boot:spring-boot-starter-quartz'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// Spring Batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.batch:spring-batch-core:5.0.0'
	implementation 'org.springframework.batch:spring-batch-infrastructure:5.0.0'

	implementation 'org.apache.tomcat:tomcat-jdbc:9.0.73' // 최신 버전 사용

	// firebase Storage
	implementation 'com.google.firebase:firebase-admin:9.3.0'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	// Spring Cache - 캐싱을 통한 성능 향상
	implementation 'org.springframework.boot:spring-boot-starter-cache'

	// Spring Actuator - 모니터링 및 애플리케이션 관리
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// WebSocket - 실시간 기능 지원
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'

	// 테스트 관련 의존성
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-core:4.11.0'  // Mockito로 목 객체 생성
	testImplementation 'org.assertj:assertj-core:3.23.1'  // AssertJ로 테스트 검증
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
